metadata/unpackaged/objects/Crew_Information__c.object
<CustomObject>
    <fields>
        <fullName>Deployment_Region_Previous__c</fullName>
        <label>Deployment Region - Previous</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China/Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia/CIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_of_Operation__c</fullName>
        <description>Africa
Canada
China/Asia Pacific
Europe
Latin America
Mexico
Middle East
Russia/CIS
USA</description>
        <label>Deployment Region - Current</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China/Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia/CIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_s_of_Operation__c</fullName>
        <description>Dynamite
Viberseis
Mixed Mode</description>
        <label>Operation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dynamite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Mode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viberseis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <picklist>
            <picklistValues>
                <fullName>2D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Crew_Count__c</fullName>
        <label>Total Crew Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Crew Information</label>
    <nameField>
        <displayFormat>Crew-{000000}</displayFormat>
        <label>Crew Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crew Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>